; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sk_release_kernel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sk_release_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32* }

@init_net = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sk_release_kernel(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %3 = load %struct.sock*, %struct.sock** %2, align 8
  %4 = icmp eq %struct.sock* %3, null
  br i1 %4, label %10, label %5

5:                                                ; preds = %1
  %6 = load %struct.sock*, %struct.sock** %2, align 8
  %7 = getelementptr inbounds %struct.sock, %struct.sock* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %5, %1
  br label %26

11:                                               ; preds = %5
  %12 = load %struct.sock*, %struct.sock** %2, align 8
  %13 = call i32 @sock_hold(%struct.sock* %12)
  %14 = load %struct.sock*, %struct.sock** %2, align 8
  %15 = getelementptr inbounds %struct.sock, %struct.sock* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @sock_release(i32* %16)
  %18 = load %struct.sock*, %struct.sock** %2, align 8
  %19 = call i32 @sock_net(%struct.sock* %18)
  %20 = call i32 @release_net(i32 %19)
  %21 = load %struct.sock*, %struct.sock** %2, align 8
  %22 = call i32 @get_net(i32* @init_net)
  %23 = call i32 @sock_net_set(%struct.sock* %21, i32 %22)
  %24 = load %struct.sock*, %struct.sock** %2, align 8
  %25 = call i32 @sock_put(%struct.sock* %24)
  br label %26

26:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @sock_hold(%struct.sock*) #1

declare dso_local i32 @sock_release(i32*) #1

declare dso_local i32 @release_net(i32) #1

declare dso_local i32 @sock_net(%struct.sock*) #1

declare dso_local i32 @sock_net_set(%struct.sock*, i32) #1

declare dso_local i32 @get_net(i32*) #1

declare dso_local i32 @sock_put(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
